--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:layout_above="@id/bottom"
         android:id="@+id/fragment_container"
+
         >
 
     </FrameLayout>
@@ -24,12 +25,14 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
+            android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?android:attr/windowBackground"
             app:itemIconTint="@color/selector"
             app:labelVisibilityMode="unlabeled"
-            app:menu="@menu/bottom_navigation" />
+            app:menu="@menu/bottom_navigation"
+           />
 
     </com.google.android.material.appbar.AppBarLayout>
 
