--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -163,65 +163,80 @@
 
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="16dp">
+                android:layout_marginLeft="16dp"
+                android:orientation="vertical">
+
                 <TextView
+                    android:id="@+id/tvFullname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
                     android:text="Full name"
-                    android:textStyle="bold"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="16sp"
-                    android:maxLines="1"
-                    android:id="@+id/tvFullname"
-                    />
+                    android:textStyle="bold" />
+
                 <TextView
+                    android:id="@+id/tvBio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:maxLines="1"
                     android:text="What is the most important thing in love?"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp"
-                    android:maxLines="1"
-                    android:id="@+id/tvBio"
-                    android:layout_marginTop="4dp"
-                    />
+                    android:textSize="16sp" />
+
                 <RelativeLayout
+                    android:id="@+id/btLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                  >
-                    <RelativeLayout
-                        android:layout_marginEnd="10dp"
-                        android:gravity="center"
-                        android:layout_width="36dp"
+                    android:orientation="horizontal">
+
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btEdit"
+                        android:layout_width="280dp"
                         android:layout_height="36dp"
-                        android:layout_alignParentEnd="true"
-                        android:background="@drawable/button_background_no_border">
+                        android:layout_centerVertical="true"
+                        android:layout_marginBottom="20dp"
+                        android:background="@drawable/button_background_no_border"
+                        android:minWidth="200dp"
+                        android:text="Edit Profile"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorPrimaryDark" />
+
+                    <RelativeLayout
+
+                        android:layout_width="50dp"
+                        android:layout_height="36dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="10dp"
+
+
+                        android:layout_toEndOf="@+id/btEdit"
+                        android:background="@drawable/button_background_no_border"
+                        android:gravity="center">
+
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_add_friend"/>
+                            android:src="@drawable/ic_add_friend" />
 
 
                     </RelativeLayout>
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btEdit"
-                        android:layout_width="340dp"
-                        android:layout_height="36dp"
-                        android:background="@drawable/button_background_no_border"
-                        android:text="Edit Profile"
-                        android:textAllCaps="false"
-                        android:textColor="@color/colorPrimaryDark"
-
-                        />
-
-
                 </RelativeLayout>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -229,8 +244,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="-5dp"
                 android:layout_marginRight="-5dp"
-                android:id="@+id/last_bar"
-                android:background="?android:attr/windowBackground">
+                android:id="@+id/last_bar">
+
 
                 <ImageButton
                     android:layout_width="0dp"
@@ -249,15 +264,22 @@
 
 
             </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorAccent"/>
+        </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/rvPhoto"
+                android:layout_height="match_parent"
+                android:id="@+id/rvPhotos"
+                android:layout_marginRight="-16dp"
+                android:layout_marginLeft="-16dp"
                 />
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/rvSave"
+                android:id="@+id/rvSaves"
                 android:visibility="gone"
                 />
 
