--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,12 +33,20 @@
 
 
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imgPost"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-          />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imgPost"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -59,19 +68,19 @@
                 android:src="@drawable/ic_comment" />
 
             <ImageView
+                android:id="@+id/imgSave"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_save_black"
-                android:id="@+id/imgSave"/>
+                android:src="@drawable/ic_save_black" />
         </RelativeLayout>
+
         <TextView
             android:id="@+id/tvLikes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="@color/colorPrimaryDark"
-            />
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/tvPublisher"
@@ -90,14 +99,14 @@
             android:textColor="@color/colorPrimaryDark" />
 
         <TextView
+            android:id="@+id/tvComments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
             android:text="View All 20 comment "
-            android:textColor="@color/colorAccent"
-            android:id="@+id/tvComments"/>
+            android:textColor="@color/colorAccent" />
 
 
     </LinearLayout>
